# dspsr

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile.am  README.md  TODO.md  configure.ac  greps  log
Documentation/: dspsr.dox
Kernel/: Makefile.am
Kernel/Applications/: Makefile.am  digihdr
Kernel/Classes/: ASCIIObservation.C  BitSeries.C  BitTable.C  BlockFile.C  ChannelOrder.C  DADAFile.C  DataSeries.C  EightBitUnpacker.C  EventEmitter.h  FIRFilter.C  File.C  FloatUnpacker.C  FloatUnpackerCUDA.cu  FourBitUnpacker.C  HistUnpacker.C  IOManager.C  Input.C  InputBuffering.C  InputBufferingShare.C  Makefile.am  MultiFile.C  Observation.C  ObservationInterface.C  Rational.C  Rational.h  Seekable.C  TimeSeries.C  TimeSeriesCUDA.cu  TwoBitCorrection.C  Unpacker.C  WeightedTimeSeries.C  ascii_header.c  environ.h  test_environ.c
Kernel/Classes/dsp/: ASCIIObservation.h  BitSeries.h  BufferingPolicy.h  DataSeries.h  FIRFilter.h  FloatUnpacker.h  FloatUnpackerCUDA.h  InputBuffering.h  InputBufferingShare.h  Observation.h  Operation.h  TimeSeries.h  Transformation.h
Kernel/Formats/: Unpacker_registry.C
Kernel/Formats/boreas/: BoreasSurveyUnpacker.C  BoreasVoltageUnpacker.C  BoreasVoltageUnpackerCUDA.cu  Makefile.am
Kernel/Formats/boreas/dsp/: BoreasSurveyUnpacker.h  BoreasVoltageFloatUnpacker.h  BoreasVoltageUnpacker.h  BoreasVoltageUnpackerCUDA.h
Kernel/Formats/bpsr/: BPSRCrossUnpacker.C
Kernel/Formats/caspsr/: CASPSRUnpacker.C  CASPSRUnpackerCUDA.cu
Kernel/Formats/cpsr/: CPSRFile.C  pspm.C  pspmDbase.C
Kernel/Formats/cpsr2/: yamasaki_verify.C
Kernel/Formats/dada/: DADABuffer.C
Kernel/Formats/fits/: FITSDigitizer.C  FITSDigitizerCUDA.cu  FITSFile.C  FITSOutputFile.C  FITSUnpacker.C  Makefile.am
Kernel/Formats/fits/dsp/: FITSDigitizer.h  FITSDigitizerCUDA.h  FITSFile.h  FITSOutputFile.h  FITSUnpacker.h
Kernel/Formats/guppi/: Makefile.am  hget.c
Kernel/Formats/kat/: MeerKATUnpacker.C
Kernel/Formats/lbadr/: SMROTwoBitCorrection.C
Kernel/Formats/mark5b/: Mark5bFile.C  Mark5bUnpacker.C
Kernel/Formats/sigproc/: SigProcObservation.C
Kernel/Formats/ska1/: AAVS2Unpacker.C  AAVS2UnpackerCUDA.cu  CBFPSRUnpacker.C  LFAASPEADUnpacker.C  LFAASPEADUnpackerCUDA.cu  Makefile.am
Kernel/Formats/ska1/dsp/: AAVS2Unpacker.h  AAVS2UnpackerCUDA.h  CBFPSRUnpacker.h  LFAASPEADUnpacker.h  LFAASPEADUnpackerCUDA.h
Kernel/Formats/uwb/: Makefile.am  UWBEightBitUnpacker.C  UWBFourBitUnpacker.C  UWBUnpacker.C
Kernel/Formats/uwb/dsp/: UWBEightBitUnpacker.h  UWBFourBitUnpacker.h
Kernel/Formats/vdif/: VDIFFile.C  vdifio.h
Management/: release.csh.in
More/Applications/: Makefile.am
Signal/: Makefile.am
Signal/General/: ACFilterbank.C  Apodization.C  AutoCorrelation.C  Bandpass.C  CUFFTError.C  Chomper.C  Convolution.C  ConvolutionCUDA.cu  ConvolutionCUDACallbacks.cu  ConvolutionCUDASpectral.cu  Dedispersion.C  DedispersionSampleDelay.C  DelayStartTime.C  DelayStartTimeCUDA.cu  DerippleResponse.C  Detection.C  DetectionCUDA.cu  Dump.C  FScrunch.C  FScrunchCUDA.cu  Filterbank.C  FilterbankConfig.C  FilterbankEngineCPU.C  FilterbankEngineCUDA.cu  GeometricDelay.C  InverseFilterbank.C  InverseFilterbankConfig.C  InverseFilterbankEngineCPU.C  InverseFilterbankEngineCUDA.cu  InverseFilterbankResponse.C  LoadToFITS.C  LoadToFil.C  Makefile.am  PScrunch.C  PScrunchCUDA.cu  Rescale.C  Response.C  ResponseProduct.C  SKComputerCUDA.cu  SKDetector.C  (+28 more)
Signal/General/dsp/: Apodization.h  Bandpass.h  Convolution.h  ConvolutionCUDA.h  ConvolutionCUDASpectral.h  Filterbank.h  (+36 more)
Signal/Pulsar/: Archiver.C  ArchiverExtensions.C  CyclicFold.C  Fold.C  FoldCUDA.cu  FoldManager.C  LoadToFold1.C  LoadToFoldConfig.C  LoadToFoldN.C  Makefile.am  PhaseLockedFilterbank.C  PhaseSeries.C  PhaseSeriesUnloader.C  SubFold.C  TimeDivide.C  UnloaderShare.C  dspsr.C
Signal/Statistics/: Makefile.am  PearsonIV.C  SKLimits.C  sk_distrib_plot.C  sk_limit_plot.C
config/: .gitignore  Makefile.am  yaml-cpp.m4
python/: Makefile.am  dspsr.i  example.py
test/: InverseFilterbankTestConfig.cpp  InverseFilterbankTestConfig.hpp  InverseFilterbank_test_config.h  Makefile.am  TestConfig.cpp  TestConfig.hpp  TransformationProxy.cpp  TransformationProxy.hpp  bench_main.cu  test_Apodization  test_Apodization.C  test_Apodization.cpp  test_DerippleResponse  test_DerippleResponse.C  test_EventEmitter.cpp  test_FIRFilter  test_FIRFilter.C  test_FIRFilter.cpp  test_FTransform_cufft_precision.cpp  test_InverseFilterbank  test_InverseFilterbank.C  test_InverseFilterbankConfig  test_InverseFilterbankConfig.C  test_InverseFilterbankEngineCPU.C  test_InverseFilterbankEngineCUDA.cu  test_InverseFilterbankEngineCUDA_kernels.cu  test_InverseFilterbankEngine_integration.cu  test_InverseFilterbankPipeline  test_InverseFilterbankPipeline.C  test_InverseFilterbankResponse  test_InverseFilterbankResponse.C  test_LoadToFold1  test_Response.cpp  test_config.json  test_config.toml  test_main.C  test_main.cpp  util.cpp  util.cuda.hpp  util.hpp
test/Convolution/: test_Convolution.cpp
test/Detection/: test_Detection.cpp
test/Filterbank/: test_FilterbankConfig.cpp  test_FilterbankEngineCPU.cpp  test_FilterbankEngineCUDA.cpp  test_FilterbankEngineCUDA.cu
test/InverseFilterbank/: InverseFilterbankTestConfig.cpp  InverseFilterbankTestConfig.hpp  bench_InverseFilterbank.cpp  bench_InverseFilterbankEngineCUDA.cu  test_InverseFilterbank.cpp  test_InverseFilterbankConfig.cpp  test_InverseFilterbankEngineCPU.cpp  test_InverseFilterbankEngineCUDA.cpp  test_InverseFilterbankEngineCUDA.cu  test_InverseFilterbankEngineCUDA_kernels.cpp  test_InverseFilterbankEngineCUDA_kernels.cu  test_InverseFilterbankEngine_integration.cpp  test_InverseFilterbankEngine_integration.cu  test_InverseFilterbankPipeline.cpp  test_InverseFilterbankResponse.cpp
test/PScrunch/: test_PScrunch.cpp  test_PScrunchCUDA.cpp
test/SpectralKurtosis/: SpectralKurtosisTestConfig.hpp  test_SpectralKurtosis.cpp  test_SpectralKurtosis_integration.cpp
test/util/: TestConfig.cpp  TestConfig.hpp  TestReporter.hpp  TransformationProxy.cpp  TransformationProxy.hpp  util.cpp  util.hpp
(+15 files in other folders)
